--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
             <button disabled="" id="muteBtn" onclick="mute()">Mute</button>
             <button disabled="" id="enableVideoBtn" onclick="enableVideo()">Enable/disable Video</button>
+            <button disabled="" id="shareScreen" onclick="handleShareScreen()">Share Screen</button>
+
         </div>
 
         <div>
